Good thesis progress

--- a/doc/latex/proposal.tex
+++ b/doc/latex/proposal.tex
@@ -27,7 +27,7 @@
     style=authoryear,
     sorting=none
 ]{biblatex}
-\addbibresource{citations.bib}
+\addbibresource{citations_proposal.bib}
 
 \newenvironment{tight_enumerate}{
 \begin{enumerate}
