maybe go back to variants title

--- a/doc/latex/proposal.tex
+++ b/doc/latex/proposal.tex
@@ -35,7 +35,7 @@
   \setlength{\parskip}{0pt}
 }{\end{enumerate}}
 
-\title{A Featureful Fourier Transform from the North}
+\title{Fancy Fourier Transforms in the North}
 \author{Sevag Hanssian, sevag.hanssian@mail.mcgill.ca}
 
 \begin{document}
