--- a/doc/latex/report.tex
+++ b/doc/latex/report.tex
@@ -58,7 +58,7 @@
   \addtolength\mintednumbersep{-\wd0}%
 }
 
-\title{A Featureful Fourier Transform from the North}
+\title{Fancy Fourier Transforms in the North}
 
 \author{\vspace{2em}\\Sevag Hanssian \\
   McGill University \\
@@ -114,7 +114,7 @@ foo
 
 \subsection{Contribution and results}
 
-My intended and favorite contribution of this thesis is the creation and open-source publication of a new Fourier transform library, named ``FFTN,'' which stands for a \textit{Featureful Fourier Transform from the North}. The name is chosen in the same spirit as FFTW (Fastest Fourier Transform in the West), created in U.C. Berkeley in the West coast of the United States, and FFTS (Fastest Fourier Transform in the South), created in Australia. \todo{cite the whitepapers} The goal of my library is not speed, but to gather many variants of the Fast Fourier transform in a single place, intended to be explored and experimented with as drop-in replacements of the traditional FFT in music systems. Hence, the word Featureful denotes the availability of all of the variants in a single library, and North is because I created it in my city of Montr{\'e}al, Canada (which is further North than Australia or Berkeley).
+My intended and favorite contribution of this thesis is the creation and open-source publication of a new Fourier transform library, named ``FFTN,'' which stands for a \textit{Fancy Fourier Transforms in the North}. The name is chosen in the same spirit as FFTW (Fastest Fourier Transform in the West), created in U.C. Berkeley in the West coast of the United States, and FFTS (Fastest Fourier Transform in the South), created in Australia. \todo{cite the whitepapers} The goal of my library is not speed, but to gather many variants of the Fast Fourier transform in a single place, intended to be explored and experimented with as drop-in replacements of the traditional FFT in music systems. Hence, the word Fancy denotes the availability of interesting variants in a single library, and North is because I created it in my city of Montr{\'e}al, Canada (which is further North than Australia or Berkeley).
 
 Additionally, a recent paper \cite{emomucs} was studied which achieved state-of-the-art results in music emotion classification using a neural network architecture with log-mel spectrograms as input features. It was shown that using several of the variants from FFTN led to improved results, in both computational or memory usage footprint and improved classification F-score.
 
@@ -212,6 +212,10 @@ foo
 foo
 
 \section{Results}
+
+foo
+
+\subsection{Outputs of implemented variants}
 
 foo
 
