Do some rearranging

--- a/doc/latex/citations.bib
+++ b/doc/latex/citations.bib
@@ -26,16 +26,6 @@ publisher = {Kluwer Academic, Boston},
 year = {1999}
 }
 
-@article{notch,
-	author={Tadokoro, Yoshiaki and Kenichi Abe},
-	journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
-	title={Notch Fourier transform},
-	year={1987},
-	volume={35},
-	number={9},
-	pages={1282-1288},
-	doi={10.1109/TASSP.1987.1165281}}
-
 @article{dftimportant,
 author = {Oberst, Ulrich},
 year = {2007},
@@ -87,3 +77,24 @@ doi = {10.1090/S0025-5718-1965-0178586-1},
 	number={19},
 	pages={4707-4716},
 	doi={10.1109/TSP.2013.2273199}}
+
+@article{warped1,
+author={Anamitra Makur and Sanjit K. Mitra},
+journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
+title={Warped discrete-Fourier transform: Theory and applications},
+year={2001},
+volume={48},
+number={9},
+pages={1086-1093},
+doi={10.1109/81.948436}}
+
+@article{warped2,
+author={Anamitra Makur},
+journal={IEEE Transactions on Circuits and Systems I: Regular Papers},
+title={Computational Schemes for Warped DFT and Its Inverse},
+year={2008},
+volume={55},
+number={9},
+pages={2686-2695},
+doi={10.1109/TCSI.2008.921023}}
+
