--- a/doc/latex/citations.bib
+++ b/doc/latex/citations.bib
@@ -3,7 +3,7 @@
       author={Barnett, Alex H. and Jeremy F. Magland and Ludvig af Klinteberg},
       year={2019},
       booktitle={SIAM Journal on Scientific Computing},
-      pages = {C479-C504},
+      pages = {C479--C504},
       volume = {41},
       number = {5},
 }
@@ -14,7 +14,7 @@ title = {Accelerating the Nonuniform Fast Fourier Transform},
 journal = {SIAM Review},
 volume = {46},
 number = {3},
-pages = {443-454},
+pages = {443--454},
 year = {2004},
 doi = {10.1137/S003614450343200X},
 }
@@ -29,7 +29,7 @@ year = {1999}
 @article{dftimportant,
 author = {Oberst, Ulrich},
 year = {2007},
-pages = {496-540},
+pages = {496--540},
 title = {The Fast Fourier Transform},
 volume = {46},
 journal = {SIAM J. Control and Optimization},
@@ -43,7 +43,7 @@ doi = {10.1137/060658242}
 	year={2014},
 	volume={31},
 	number={5},
-	pages={91-100},
+	pages={91--100},
 	doi={10.1109/MSP.2014.2329131}}
 
 @article{cooleytukey,
@@ -53,7 +53,7 @@ journal = {Mathematics of Computation},
 volume = {19},
 number = {90},
 year = {1965},
-pages = {297-301},
+pages = {297--301},
 doi = {10.1090/S0025-5718-1965-0178586-1},
 }
 
@@ -64,7 +64,7 @@ doi = {10.1090/S0025-5718-1965-0178586-1},
 	year={2005},
 	volume={93},
 	number={2},
-	pages={216-231},
+	pages={216--231},
 	doi={10.1109/JPROC.2004.840301}
 }
 
@@ -75,7 +75,7 @@ doi = {10.1090/S0025-5718-1965-0178586-1},
        	year={2013},
 	volume={61},
 	number={19},
-	pages={4707-4716},
+	pages={4707--4716},
 	doi={10.1109/TSP.2013.2273199}}
 
 @article{warped1,
@@ -85,7 +85,7 @@ title={Warped discrete-Fourier transform: Theory and applications},
 year={2001},
 volume={48},
 number={9},
-pages={1086-1093},
+pages={1086--1093},
 doi={10.1109/81.948436}}
 
 @article{warped2,
@@ -95,6 +95,150 @@ title={Computational Schemes for Warped DFT and Its Inverse},
 year={2008},
 volume={55},
 number={9},
-pages={2686-2695},
+pages={2686--2695},
 doi={10.1109/TCSI.2008.921023}}
 
+@article{earlywarped1,
+author={Alan Oppenheim and Don Johnson and Kenneth Steiglitz},
+journal={Proceedings of the IEEE},
+title={Computation of spectra with unequal resolution using the fast Fourier transform},
+year={1971},
+volume={59},
+number={2},
+pages={299--301},
+doi={10.1109/PROC.1971.8146}}
+
+@article{earlywarped2,
+author={Carlo Braccini and Alan Oppenheim},
+journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+title={Unequal bandwidth spectral analysis using digital frequency warping},
+year={1974},
+volume={22},
+number={4},
+pages={236--244},
+doi={10.1109/TASSP.1974.1162582}}
+
+@inproceedings{warpedcomparison,
+author={Stefan Wabnik and Gerald Schuller and Ulrich Kr{\"a}mer and Jens Hirschfeld},
+booktitle={Proceedings. (ICASSP '05). IEEE International Conference on Acoustics, Speech, and Signal Processing},
+title={Frequency warping in low delay audio coding},
+year={2005},
+volume={3},
+number={},
+pages={iii/181--iii/184},
+doi={10.1109/ICASSP.2005.1415676}}
+
+@inproceedings{warpedpsycho,
+author={Marek Parfieniuk and Alexander Petrovsky},
+booktitle={Proceedings. (ICASSP '04). IEEE International Conference on Acoustics, Speech, and Signal Processing},
+title={Warped DFT as the basis for psychoacoustic model},
+year={2004},
+volume={4},
+number={},
+pages={iv/185--iv/188},
+doi={10.1109/ICASSP.2004.1326794}
+}
+
+@book{melbook,
+author = {Rabiner, Lawrence and Schafer, Ronald},
+title = {Theory and Applications of Digital Speech Processing},
+year = {2010},
+isbn = {0136034284},
+publisher = {Prentice Hall Press},
+address = {USA},
+edition = {1st},
+}
+
+@techreport{ipp,
+author = {Umberto Santoni and Thomas Long},
+title = {Signal Processing on Intel® Architecture: Performance Analysis using Intel® Performance Primitives},
+institution = {Intel},
+url = {https://www.intel.com/content/dam/doc/white-paper/signal-processing-on-intel-architecture.pdf}
+}
+
+@techreport{cufft,
+title = {cuFFT},
+institution = {NVIDIA},
+url = {https://developer.nvidia.com/cufft}}
+
+@techreport{ne10,
+title = {Project Ne10: An Open Optimized Software Library Project for the Arm Architecture},
+url = {https://projectne10.github.io/Ne10/}}
+
+@article{numpy,
+ title         = {Array programming with {NumPy}},
+ author        = {Charles R. Harris and K. Jarrod Millman and St{'{e}}fan J.
+                 van der Walt and Ralf Gommers and Pauli Virtanen and David
+                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+                 Brett and Allan Haldane and Jaime Fern{'{a}}ndez del
+                 R{'{\i}}o and Mark Wiebe and Pearu Peterson and Pierre
+                 G{'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+                 Travis E. Oliphant},
+ year          = {2020},
+ journal       = {Nature},
+ volume        = {585},
+ number        = {7825},
+ pages         = {357--362},
+ doi           = {10.1038/s41586-020-2649-2},
+ publisher     = {Springer Science and Business Media {LLC}},
+ url           = {https://doi.org/10.1038/s41586-020-2649-2}
+}
+
+@article{scipy,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+            Kern, Robert and Larson, Eric and Carey, C J and
+            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+            Harris, Charles R. and Archibald, Anne M. and
+            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+            Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  doi     = {10.1038/s41592-019-0686-2},
+}
+
+@article{betterbss,
+  title={Comparison of Frequency-Warped Representations for Source Separation of Stereo Mixtures},
+  author={Juan Jos{\'e} Burred and T. Sikora},
+  journal={Journal of The Audio Engineering Society},
+  year={2006}
+}
+
+@inproceedings{bettermfcc,
+	author={M. J. {Alam} and P. {Kenny} and P. {Dumouchel} and D. {O'Shaughnessy}},
+	booktitle={2014 22nd European Signal Processing Conference (EUSIPCO)},
+	title={Robust speech recognition using warped DFT-based cepstral features in clean and multistyle training},
+	year={2014},
+	volume={},
+	number={},
+	pages={1791-1795},
+	doi={}}
+
+@article{betterfractional,
+  title={Automatic musical instrument classification using fractional fourier transform based- MFCC features and counter propagation neural network},
+  author={D. Bhalke and C. Rao and D. Bormane},
+  journal={Journal of Intelligent Information Systems},
+  year={2015},
+  volume={46},
+  pages={425-446}
+}
+
+@article{bettersparse,
+title = {MRS Sparse-FFT: Reducing Acquisition Time and Artifacts for in vivo 2D Correlation Spectroscopy},
+author = {Lixin Shi and Ovidiu C. Andronesi and Haitham Hassanieh and Badih Ghazi and Dina Katabi and Elfar Adalsteinsson},
+journal = {International Society for Magnetic Resonance in Medicine},
+number = {21},
+year = {2013}}
