--- a/doc/latex/report.tex
+++ b/doc/latex/report.tex
@@ -1,4 +1,4 @@
-\documentclass[letter,12pt]{article}
+\documentclass[letter,12pt,notitlepage]{article}
 \usepackage[left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
@@ -61,17 +61,25 @@
 
 \title{\ThesisTitle}
 
-\author{\vspace{2em}\\Sevag Hanssian \\
+\author{\vspace{1em}\\Sevag Hanssian \\
   McGill University \\
- \texttt{sevag.hanssian@mail.mcgill.ca} \\
- \texttt{sevagh@protonmail.com} \\\ \\\ \\
- Thesis for Master of Arts in Music Technology}
+ \small{\texttt{sevag.hanssian@mail.mcgill.ca}} \\
+ \small{\texttt{sevagh@protonmail.com}} \\\ \\\ \\
+ \small{Thesis for Master of Arts in Music Technology}\\
+ \small{April 1, 2021}}
 
+% nil out the auto date
 \date{}
 
 \begin{document}
 
 \maketitle
+
+\vspace{3.5em}
+
+\begin{abstract}
+	The discrete Fourier transform (DFT), and the Fast Fourier Transform (FFT) algorithm for its efficient computation, rank among the most important algorithms in applied engineering and computer science. The DFT is used in digital signal processing applications to decompose a discrete-time acoustic signal into a sum of its frequency components, generating a spectrum to perform what is known as spectral or frequency analysis. This Master's thesis first proposes to describe and implement the DFT, FFT, and their sparse, pruned, nonuniform, warped, and fractional variants. Next, the use of the standard DFT and FFT in real-world music systems will be revisited to explore whether using the variants can be beneficial. The main result achieved is that a combination of several of the variants showed a simultaneous reduction in computational footprint and improvement in accuracy in a recent state-of-the-art music system.
+\end{abstract}
 
 \vfill
 \clearpage %force a page break
@@ -88,24 +96,24 @@
 \vfill
 \clearpage %force a page break
 
-\begin{abstract}
-	The discrete Fourier transform (DFT), along with the Fast Fourier Transform (FFT) \cite{cooleytukey} algorithm for its efficient computation, rank among the most important algorithms in applied engineering and computer science \cite{dftimportant}. The DFT is used in digital signal processing applications to decompose a discrete-time acoustic signal into a sum of its frequency components, generating a spectrum to perform what is known as spectral or frequency analysis. This Master's thesis first proposes to describe and implement the sparse, pruned, nonuniform, warped, and fractional variants of the DFT or FFT. Next, the use of the standard DFT and FFT in real-world music systems will be revisited to explore whether using the variants can be beneficial. The main result achieved is that a combination of several of the variants showed a reduction in computational footprint and improvement in accuracy in a recent state-of-the-art music system\todo{REAL-WORLD SOTA}.
-\end{abstract}
-
 \section{Introduction}
 \label{sec:intro}
+
+The DFT and FFT \cite{cooleytukey} are important \cite{dftimportant}.
 
    Despite its importance, the DFT has some deficiencies in real-world signals. First, the human auditory system has a nonlinear frequency resolution, with finer frequency discrimation at low frequencies \todo{cite this}, but the DFT outputs linearly-spaced frequencies. Second, real-world signals are typically sparse, with most of their energy concentrated in few frequency components \cite{sparseintro}, yet the DFT outputs values for many frequencies, most of which are discarded.
 
 \subsection{Motivation}
 
-Music and signal processing literature often show promising results by using variants of the Fourier transform\todo{cite proposal shit here}.
+Music, speech, and general signal processing literature often show improved results by substituting the standard DFT with a variant. Examples include improved music source separation \cite{betterbss}, improved speech recognition \cite{bettermfcc}, and better speech and music coding \cite{warpedcomparison} with the warped Fourier transform, improved music instrument classification \cite{betterfractional} with the fractional Fourier transform, and reduced acquisition time and artifacts for medical magnetic resonance with the sparse Fourier transform \cite{bettersparse}.
 
-However, implementations of these variants are not readily found or available in common DFT/FFT software libraries. At the time of writing this thesis, fftw,\footnote{\href{http://www.fftw.org/}{http://www.fftw.org/}} ffts,\footnote{\href{https://github.com/anthonix/ffts/}{https://github.com/anthonix/ffts/}} numpy,\footnote{\href{https://numpy.org/doc/stable/reference/routines.fft.html}{https://numpy.org/doc/stable/reference/routines.fft.html}} scipy,\footnote{\href{https://docs.scipy.org/doc/scipy/reference/tutorial/fft.html}{https://docs.scipy.org/doc/scipy/reference/tutorial/fft.html}} and hardware-specific libraries such as Intel Performance Primitives (IPP),\footnote{\href{https://software.intel.com/content/www/us/en/develop/documentation/ipp-dev-reference/top/volume-1-signal-and-data-processing/transform-functions/fourier-transform-functions/fast-fourier-transform-functions.html}{https://software.intel.com/content/www/us/en/develop/documentation/ipp-dev-reference/top/volume-1-signal-and-data-processing/transform-functions/fourier-transform-functions/fast-fourier-transform-functions.html}} cuFFT (CUDA FFT for NVIDIA GPUs),\footnote{\href{https://docs.nvidia.com/cuda/cufft/index.html}{https://docs.nvidia.com/cuda/cufft/index.html}} and Ne10 for ARM processors\footnote{\href{https://projectne10.github.io/Ne10/doc/group__groupDSPs.html}{https://projectne10.github.io/Ne10/doc/group\_\_groupDSPs.html}} only contain the standard FFT algorithms. New FFT libraries are written regularly, citing even better performance from taking advantage of new processor instructions,\footnote{\href{https://users.rust-lang.org/t/rustfft-5-0-0-experimental-1-now-faster-than-fftw/53049}{https://users.rust-lang.org/t/rustfft-5-0-0-experimental-1-now-faster-than-fftw/53049}} but few of them implement more than the standard FFT.
+However, implementations of these variants are not readily found or available in common DFT/FFT software libraries. Popular software libraries implementing the FFT, including fftw \cite{fftw},\footnote{\href{http://www.fftw.org/}{http://www.fftw.org/}} ffts \cite{ffts},\footnote{\href{https://github.com/anthonix/ffts/}{https://github.com/anthonix/ffts/}} numpy \cite{numpy},\footnote{\href{https://numpy.org/doc/stable/reference/routines.fft.html}{https://numpy.org/doc/stable/reference/routines.fft.html}} scipy \cite{scipy},\footnote{\href{https://docs.scipy.org/doc/scipy/reference/tutorial/fft.html}{https://docs.scipy.org/doc/scipy/reference/tutorial/fft.html}} and hardware-specific libraries such as Intel Performance Primitives (IPP) \cite{ipp},\footnote{\href{https://software.intel.com/content/www/us/en/develop/documentation/ipp-dev-reference/top/volume-1-signal-and-data-processing/transform-functions/fourier-transform-functions/fast-fourier-transform-functions.html}{https://software.intel.com/content/www/us/en/develop/documentation/ipp-dev-reference/top/volume-1-signal-and-data-processing/transform-functions/fourier-transform-functions/fast-fourier-transform-functions.html}} cuFFT (CUDA FFT for NVIDIA GPUs) \cite{cufft},\footnote{\href{https://docs.nvidia.com/cuda/cufft/index.html}{https://docs.nvidia.com/cuda/cufft/index.html}} and Ne10 for Arm processors \cite{ne10}\footnote{\href{https://projectne10.github.io/Ne10/doc/group__groupDSPs.html}{https://projectne10.github.io/Ne10/doc/group\_\_groupDSPs.html}} only contain the standard FFT algorithms. New FFT libraries are written regularly, citing even better performance from taking advantage of new processor instructions,\footnote{\href{https://users.rust-lang.org/t/rustfft-5-0-0-experimental-1-now-faster-than-fftw/53049}{https://users.rust-lang.org/t/rustfft-5-0-0-experimental-1-now-faster-than-fftw/53049}} but few of them implement more than the standard FFT.
+
+Furthermore, the variants are typically introduced and evaluated separately, but unexplored combination of variants might be useful. As an example, consider the sparse Fourier transform which computes $K$ points compared to the standard DFT of $N$ points where $K < N$, such that most of the useful information about the input signal is represented with fewer points \cite{sparseintro}. Also, consider the warped Fourier transform, which can be made to output frequency components that align closer with the frequency response of the human auditory system \cite{warpedpsycho}. A hypothetical ``sparse-warped'' FFT might combine both benefits of a closer relation to the human auditory system and a smaller computation cost of $K < N$ useful frequency components.
 
 \subsection{Thesis objective}
 
-The primary objective of this thesis is to collect implementations of different variants of the discrete Fourier transform (DFT) and fast Fourier transform (FFT) in a single library with a well-defined interface that resembles the traditional DFT or FFT as closely as possible. The intention is to be able to be substitute any of the variants in existing codebases with minor (or ideally, no) code changes, to reduce the friction of adoption. For maximum compatibility, the core library is written in C, with bindings created for Python. The majority of higher-level tools and languages used for MIR and DSP applications have capabilities for using C libraries, so that the fftn would only need to have additional wrappers or bindings created to support arbitrary languages. \todo{need C universal abi citation}
+The primary objective of this thesis is to collect implementations of different variants of the discrete Fourier transform (DFT) and fast Fourier transform (FFT) in a single library with a well-defined interface that resembles the traditional DFT or FFT as closely as possible. The intention is to be able to be substitute any of the variants in existing codebases with minor (or ideally, no) code changes, to reduce the friction of adoption. For maximum compatibility, the core library is written in C, with bindings created for Python. The majority of higher-level tools and languages used for MIR and DSP applications have capabilities for using C libraries, so that the fftn would only need to have additional wrappers or bindings created to support arbitrary languages. \todo{need C universal abi citation} The variants can be considered separately or combined in hybrid algorithms wherever it makes sense to do so.
 
 The secondary objective of this thesis is to substitute the implemented variants in a state-of-the-art music system and determine whether 
 
@@ -115,9 +123,9 @@ foo
 
 \subsection{Contribution and results}
 
-My intended and favorite contribution of this thesis is the creation and open-source publication of a new Fourier transform library,\footnote{\href{https://github.com/sevagh/fftn}{https://github.com/sevagh/fftn}} named ``fftn,'' which stands for a \textit{Fancy Fourier Transforms in the North}. The name is chosen in the same spirit as fftw\cite{fftw} (Fastest Fourier Transform in the West), created at the Massachusetts Institute of Technology (MIT) in the United States and named after the ``Fastest Gun in the West'' trope from Spaghetti Western movies,\footnote{\href{http://www.fftw.org/faq/section1.html\#west}{http://www.fftw.org/faq/section1.html\#west}} and ffts\cite{ffts} (Fastest Fourier Transform in the South), created at The University of Waikato in New Zealand which is located in the southern hemisphere of the world. The goal of my library is not speed through further optimizing the standard FFT, but to gather many variants of the FFT (which may inherently include a speedup) in a single place, intended to be explored and experimented with as drop-in replacements of the traditional FFT in music systems. Hence, the word \textit{Fancy} denotes the implementation of interesting and uncommon variants, and north is because I created it in my city of Montr{\'e}al, Canada (which is further north than New Zealand or MIT).
+The primary contribution of this thesis is the creation and open-source publication of a new Fourier transform library,\footnote{\href{https://github.com/sevagh/fftn}{https://github.com/sevagh/fftn}} named fftn, which stands for a \textit{Fast Fourier Transforms from the North}. The name is chosen in the same spirit as fftw\cite{fftw} (Fastest Fourier Transform in the West), created at the Massachusetts Institute of Technology (MIT) in the United States and named after the ``Fastest Gun in the West'' trope from Spaghetti Western movies,\footnote{\href{http://www.fftw.org/faq/section1.html\#west}{http://www.fftw.org/faq/section1.html\#west}} and ffts\cite{ffts} (Fastest Fourier Transform in the South), created at The University of Waikato in New Zealand which is located in the southern hemisphere of the world. The goal of my library is not to further optimize the standard FFT to make it faster, but to gather many variants of the FFT in a single place. Hence, the pluralized word \textit{transforms} denotes the implementation of different FFT variants, and the library is from the north because I created it in my city of Montr{\'e}al, Canada (which is further north than New Zealand or Massachusetts).
 
-Additionally, a recent paper \todo{PICK SOTA!}
+A secondary contribution of this thesis showed that substituting variants of FFT in a recent music system \todo{PICK SOTA!} showed a simultaneous reduction of the computational footprint and accuracy of results. This indicates that the use of these variants could be a promising avenue for future research, and it is hoped that the fftn library will become an important tool in future music systems.
 
 \subsection{Outline}
 
@@ -127,13 +135,11 @@ foo
 
 foo
 
-\subsection{Fourier transform}
-
-foo
-
 \subsection{Discrete Fourier transform}
 
-foo
+A characteristic of the standard DFT is that the output frequencies are evenly spaced. For an $N$-point DFT, the DFT coefficient at bin (or index) 0 corresponds to the DC component of the sound, and every non-zero coefficient corresponds to a frequency $\frac{n}{\mathit{fs}}, n \in (0, N)$, where $\mathit{fs}$ is the sampling rate of the input signal. In practice, since frequencies above the Nyquist rate cannot be represented, the useful bins of a DFT are between $1$ and $\frac{N}{2}+1$, representing the frequencies $\frac{1}{\mathit{fs}}$ Hz and $\frac{\mathit{fs}}{2} = f_{\text{nyq}}$ Hz. Each bin in between is spaced $\frac{1}{\mathit{fs}}$ apart from the previous and next bin.
+
+\todo[inline]{unit circle z plane blah}
 
 \subsection{Fast Fourier transform}
 
@@ -141,13 +147,11 @@ foo
 
 \subsection{Common operations with the Fourier transform}
 
-correlations, convolutions, STFT
+\subsubsection{Time-frequency and spectral analysis}
+
+Cepstral coefficients is here too, spectrograms, etc.
 
 \subsubsection{Correlation and convolution}
-
-\subsubsection{Time-frequency analysis}
-
-\subsubsection{Cepstral coefficients}
 
 \subsection{Usage in music systems}
 
@@ -159,33 +163,52 @@ foo
 
 \subsection{Psychoacoustic DFT}
 
-\qquad \textit{abbreviations:} NFT (nonuniform Fourier transform), NUFFT (nonuniform FFT), WDFT (warped DFT)
+\qquad \textit{abbreviations:} NFT (nonuniform Fourier transform), NUFFT (nonuniform FFT), NDFT (nonuniform DFT), WDFT (warped DFT), WDLDFT (warped delay line DFT)
 
-A characteristic of the standard DFT is that the output frequencies are evenly spaced. For an $N$-point DFT, the DFT coefficient at bin (or index) 0 corresponds to the DC component of the sound, and every non-zero coefficient corresponds to a frequency $\frac{n}{\mathit{fs}}, n \in (0, N)$, where $\mathit{fs}$ is the sampling rate of the input signal. In practice, since frequencies above the Nyquist rate cannot be represented, the useful bins of a DFT are between $1$ and $\frac{N}{2}+1$, representing the frequencies $\frac{1}{\mathit{fs}}$ Hz and $\frac{\mathit{fs}}{2} = f_{\text{nyq}}$ Hz. Each bin in between is spaced $\frac{1}{\mathit{fs}}$ apart from the previous and next bin.
+The human auditory system has a non-linear frequency response, with a finer frequency resolution at lower frequencies. \todo{BCJ Moore or Plack} This has implications in both speech and music processing. In music, low frequency bass notes establish the harmonic basis of a song. \todo{doerfler}
 
-The human auditory system has a non-linear frequency response, with a finer frequency resolution at lower frequencies. \todo{BCJ Moore or Plack} This has implications in both speech and music processing. In music, low frequency bass notes establish the harmonic basis of a song. \todo{doerfler} Common approaches, such as spectrograms using the log, Mel, Bark, or octave psychoacoustic frequency scales, involve reducing an $N$-point DFT to an $L$-point DFT where $L$ represents nonuniform frequencies on the nonlinear Mel or Bark scales \todo{cite psychoacoustic scales}.
 
-\todo{nice psychoacoustic diagrams here}
+\todo[inline]{nice psychoacoustic diagrams here}
 
-\subsubsection{Warped DFT}
+A common approach is to apply post-processing on the linear frequencies of the spectrogram output by the standard DFT to modify the scale to logarithmic, or the mel or Bark psychoacoustic frequency scales \todo{cite psychoacoustic scales}. Figure \ref{fig:melfilter} from the MATLAB documentation\footnote{\href{https://www.mathworks.com/help/audio/ref/melspectrogram.html}{https://www.mathworks.com/help/audio/ref/melspectrogram.html}} shows the computation of a mel spectrogram from the standard FFT as described by \citet[463]{melbook}.
 
-The warped DFT \cite{warped1, warped2}.
+\begin{figure}[ht]
+	\centering
+	\subfloat[Computation of mel spectrogram]{\includegraphics[width=11cm]{./melspectrogram_1.png}}
+	\subfloat[DFT weighting functions for mel scale]{\includegraphics[height=3cm]{./melspectrogram_2.png}}
+	\caption{Computation of mel spectrogram}
+	\label{fig:melfilter}
+\end{figure}
 
- In warped DFT, such nonuni-form frequency samples are obtained by a nonlinear warping ofuniform spacing. In nonuniform DFT, the frequency samples arecompletely arbitrary [3]. The above DFT variants are arrangedin the increasing order of flexibility.1
-
+Instead of post-processing the standard DFT to map to a psychoacoustic frequency scale, one option is to use a variant of the DFT which outputs the psychoacoustic frequencies directly. This may lead to significant computational savings in systems. The nonuniform DFT (NDFT) and warped DFT (WDFT) are two such possibilities.
 
 \subsubsection{Nonuniform DFT}
 
-A generalization of the warped DFT.
+The variant of the DFT which can output arbitrarily-spaced frequencies is the nonuniform (or nonequispaced) DFT, also referred to as the NFT (nonuniform Fourier transform), NDFT (nonuniform discrete Fourier transform), and NUFFT (nonuniform Fast Fourier transform). The most recent implementation of the NUFFT is by \citet{nufft1} with source code available,\footnote{\href{https://finufft.readthedocs.io/en/latest/index.html}{https://finufft.readthedocs.io/en/latest/index.html}} which in turn derives from earlier work \cite{nufft2, nufft3}.
 
-The variant of the DFT which attempts to output $L$ non-linear frequencies directly (without first computing linearly-spaced $N > L$ points, many of which will be discarded) is the nonuniform (or nonequispaced) DFT, also referred to as the NFT (nonuniform or nonequispaced Fourier transform) and NUFFT (nonuniform Fast Fourier transform). The most recent implementation of the NUFFT is by \citet{nufft1} with source code available,\footnote{\href{https://finufft.readthedocs.io/en/latest/index.html}{https://finufft.readthedocs.io/en/latest/index.html}} which in turn derives from earlier work \cite{nufft2, nufft3}.
+\subsubsection{Warped DFT}
+
+Another way to change the uniform spacing of the DFT to a nonuniform psychoacoustic spacing is to apply the standard, uniformly-spaced DFT on a warped frequency scale. Those uniformly-spaced frequencies on the warped frequency scale then correspond to nonuniformly-spaced frequencies on the original frequency scale. This implementation is known as the warped DFT (WDFT) \cite{warped1}, and it is a generalization of the nonuniform DFT, or NDFT \cite{nufft3}. \citet{warped2} provides for improved computational efficiency of the forward and inverse WDFT.
+
+As described by \citet{warpedcomparison} in their paper comparing different warped Fourier transform implementations, a previous approach to the warped DFT \cite{earlywarped1, earlywarped2} was to apply an allpass network (or warped delay line) to the input signal $x[n]$ to a new frequency-warped sequence $y[n]$, and then apply the standard DFT (they name the old approach the WDLDFT, or warped delay line DFT, while WDFT refers to the method based on the NDFT). The WDFT and WDLDFT filterbanks are shown in figure \ref{fig:wdfts}.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[WDFT filterbank]{{\includegraphics[height=5cm]{./wdft.png} }}
+	\subfloat[WDLDFT filterbank]{{\includegraphics[height=5cm]{./wdldft.png} }}
+	\caption{Two approaches to warped-frequency DFTs}
+	\label{fig:wdfts}
+\end{figure}
+
+\citet{warped1} describe that the WDLDFT approach leads only to an approximation of the warped-frequency magnitudes, while the WDFT leads to an exact solution. Additionally, \citet{warpedcomparison} found that in their psychoacoustic experiment, the WDFT performed better than the WDLDFT. Therefore, the implementation of the WDFT in this thesis will be the version based on the NDFT \cite{warped1}, taking into account the most recently proposed implementation details \cite{warped2}.
+
+\todo[inline]{benefit of temporal resolution same as cqt}
 
 \subsubsection{Relation to the Constant-Q transform}
 
 foo
 
 \subsection{Sparse and pruned DFT}
-
 
 A statement on pruned FFTs from the fftw website\footnote{\href{http://www.fftw.org/pruned.html}{http://www.fftw.org/pruned.html}} recommends ``not bothering to consider a pruned 1d FFT,'' since the computational cost savings of pruning may not be worth losing the optimization of the regular FFT for the 1-dimensional case (it is a different story for 2d or higher dimension Fourier transforms, but those are not used for music analysis). This thesis also seeks to revisit this idea, to see whether sparse or pruned FFTs for 1-dimensional audio signals are worth using. In machine or deep learning systems, thousands and thousands of FFTs are computed for large amounts of audio training data, and my hypothesis is that seemingly negligible computational savings for small 1d FFTs might stack up when performing many of them.
 
