--- a/doc/latex/citations.bib
+++ b/doc/latex/citations.bib
@@ -292,3 +292,45 @@ pages = {},
 title = {Constructing an invertible constant-Q transform with nonstationary Gabor frames},
 journal = {Proceedings of the 14th International Conference on Digital Audio Effects, DAFx 2011}
 }
+
+@inproceedings{klapuricqt,
+  title        = {Constant-Q Transform Toolbox for Music Processing},
+  author = {Christian Sch{\"o}rkhuber and Anssi Klapuri},
+  year         = {2010},
+  doi          = {10.5281/zenodo.849741},
+  booktitle = {7th Sound and Music Computing Conference (SMC2010)}
+}
+
+@article{fitzgeraldcqt,
+author = {Fitzgerald, Derry and Cranitch, Matt and Cychowski, Marcin},
+year = {2012},
+title = {Towards an inverse constant Q transform},
+volume = {1},
+journal = {Audio Engineering Society - 120th Convention Spring Preprints 2006}
+}
+
+@inproceedings{librosa,
+author = {McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel and Mcvicar, Matt and Battenberg, Eric and Nieto, Oriol},
+year = {2015},
+month = {01},
+pages = {18-24},
+title = {librosa: Audio and Music Signal Analysis in Python},
+doi = {10.25080/Majora-7b98e3ed-003}
+}
+
+@article{warpedold1,
+author = {H{\"a}rm{\"a}, Aki and Karjalainen, Matti and Avioja, Lauri and Välimäki, Vesa and Laine, Unto and Huopaniemi, Jyri},
+year = {2000},
+pages = {1011-1031},
+title = {Frequency-Warped Signal Processing for Audio Applications},
+volume = {48},
+journal = {Journal of the Audio Engineering Society}
+}
+
+@article{warpedold2,
+author = {Burred, Juan José and Sikora, Thomas},
+year = {2006},
+title = {Comparison of frequency-warped representations for source separation of stereo mixtures},
+volume = {2},
+journal = {Audio Engineering Society - 121st Convention Papers}
+}
